# rust-api

./: .gitignore  Cargo.toml  README.md
src/: database.rs  lib.rs  main.rs
src/config/: mod.rs
src/errors/: api_error.rs  mod.rs
src/handlers/: auth.rs  employee.rs  health.rs  misc.rs  mod.rs  object.rs  task.rs
src/middleware/: auth.rs
src/models/: auth.rs  employee.rs  mod.rs  object.rs  task.rs
src/repositories/: employee_repository.rs  mod.rs  object_repository.rs  task_repository.rs
src/services/: auth_service.rs  employee_service.rs  mod.rs  object_service.rs  task_service.rs
src/utils/: mod.rs  responses.rs
tests/: auth_tests.rs  employee_tests.rs  integration_tests.rs  object_tests.rs  task_tests.rs
tests/common/: mod.rs
