[package]
name = "rust-api-framework"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.21"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
actix-rt = "2"